link to real article

--- a/index1.htm
+++ b/index1.htm
@@ -52,7 +52,7 @@
         </p>
         
         <p style="margin: 0 auto; width: 450px; margin-top: 1.5em">
-            Перейти к <a href="index2.htm">версии 2</a> или вернуться к <a href="http://habrahabr.ru/">статье "Профилирование JavaScript с Chrome Developer Tools"</a>.
+            Перейти к <a href="index2.htm">версии 2</a> или вернуться к <a href="http://habrahabr.ru/post/149053/">статье "Профилирование JavaScript с Chrome Developer Tools"</a>.
         </p>
         
     </body> 
