--- a/index6.htm
+++ b/index6.htm
@@ -51,7 +51,7 @@
         </p>
         
         <p style="margin: 0 auto; width: 450px; margin-top: 1.5em">
-            Перейти к <a href="https://github.com/zgrossbart/jsprofarticle#javascript-profiling-article">all the different versions</a> или вернуться к <a href="http://habrahabr.ru/">статье "Профилирование JavaScript с Chrome Developer Tools"</a>.
+            Перейти к <a href="https://github.com/zgrossbart/jsprofarticle#javascript-profiling-article">all the different versions</a> или вернуться к <a href="http://habrahabr.ru/post/149053/">статье "Профилирование JavaScript с Chrome Developer Tools"</a>.
         </p>
         
     </body> 
