--- a/index5.htm
+++ b/index5.htm
@@ -55,7 +55,7 @@
         </p>
         
         <p style="margin: 0 auto; width: 450px; margin-top: 1.5em">
-            Перейти к <a href="index6.htm">версии 6</a> или вернуться к <a href="http://habrahabr.ru/">статье "Профилирование JavaScript с Chrome Developer Tools"</a>.
+            Перейти к <a href="index6.htm">версии 6</a> или вернуться к <a href="http://habrahabr.ru/post/149053/">статье "Профилирование JavaScript с Chrome Developer Tools"</a>.
         </p>
         
     </body> 
